@@ -12,6 +12,7 @@
       and only set value pointer:
 
           * src/object/o_bus_object.c
+          * src/object/o_circle_object.c
 
 2020-08-17 Wiley E. Hill <wileyhill@gmail.com>
 
